--- a/09-bayesian-modelling.qmd
+++ b/09-bayesian-modelling.qmd
@@ -229,7 +229,8 @@ glmm_bayes <-
     family  = inverse.gaussian(link = "log"),
     cores   = n_cores,
     chains  = n_cores,
-    verbose = TRUE
+    verbose = TRUE,
+    refresh = TRUE
   )
 
 # student_t(df = 10, location = -1.07, scale = 1.15)
