--- a/09-bayesian-modelling.qmd
+++ b/09-bayesian-modelling.qmd
@@ -223,40 +223,56 @@ model_selection <-
 ```
 
 ```{r}
+# null model
+formula_0 <- rt ~ (1|subjectid)
+# intercept by-participant
+formula_1 <- rt ~ (aphantasia + congruence + color)^2 + (1|subjectid)
+# intercept and slope on congruence by-participant
+formula_2 <- rt ~ (aphantasia + congruence + color)^2 + (congruence|subjectid)
+# intercept and slope on color by-participant
+formula_3 <- rt ~ (aphantasia + congruence + color)^2 + (color|subjectid)
+# intercept and slope on congruence and color by-participant
+formula_4 <- rt ~ (aphantasia + congruence + color)^2 + (congruence + color|subjectid)
+
 # Bayesian multilevel model
 glmm_bayes <- 
   linear_reg() |> 
   set_engine(
     "stan_glmer",
-    family  = Gamma(link = "identity"),
-    # prior = student_t(df = 10, location = -1.07, scale = 1.15, autoscale = TRUE),
-    # prior_intercept = normal(location = 0.5, scale = 0.1),
-    iter = 1000,
+    family  = inverse.gaussian(link = "identity"),
+    prior = normal(
+      location = c(   0,   0,   0,   0,   0,   0), 
+      scale    = c( .45, .45, .45, .45, .45, .45)
+      ),
+    prior_intercept = student_t(
+      df = 10, 
+      location = .557, 
+      scale = .309
+      ),
+    iter = 2000,
     cores   = n_cores,
     chains  = n_cores,
     verbose = TRUE,
     refresh = TRUE
   )
 
-# student_t(df = 10, location = -1.07, scale = 1.15)
-
 (model_bayes <-
   workflow() |> 
-  add_recipe(model_recipe_glmm_ex) |> 
+  add_recipe(model_recipe_glmm_im) |> 
   add_model(glmm_bayes, formula = formula_2) |> 
-  fit(df_explicit_rt) |> 
+  fit(df_implicit_rt) |> 
   extract_fit_engine()) |> system.time() -> time_bayesian
 
+saveRDS(model_bayes, "results/bayesian_glmm.RDS")
+```
+
+
+
+```{r}
+# Examination
 model_bayes |> prior_summary()
 pp_check(model_bayes)
 model_bayes |> describe_posterior()
-
-model_glmm_ex <-
-  workflow() |> 
-  add_recipe(model_recipe_glmm_ex) |> 
-  add_model(glmm_inverse_log, formula = formula_2) |> 
-  fit(df_explicit_rt) |> 
-  extract_fit_engine()
 ```
 
 
